# parlamentor-api-v2

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
api/: analysis.py  auth.py  config.py  costs.py  db.py  drafting.py  editorial.py  email.py  executor.py  main.py  orchestrator.py  prefetch.py  prompts.py  research.py  routes.py  schemas.py  tools.py  tracing.py  ws.py
api/models/: __init__.py
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_research_assets_table.py  b3d4e5f6a7b8_add_user_id_to_investigations.py  f957dc9e6455_initial_v2_schema_8_tables.py
scripts/: seed.py  test_parla_connection.py  validate_architecture.py
