[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parlamentor-v2"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "anthropic>=0.50.0",
    "langfuse>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
