[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parlamentor-v2"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "websockets>=12.0,<17.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "anthropic>=0.50.0,<1.0",
    "langfuse>=3.0,<4.0",
    "python-slugify>=8.0,<9.0",
    "pyjwt>=2.0,<3.0",
    "cryptography>=41.0,<43.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.3,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
